@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T00:37:48Z",
+  "timestamp" : "2022-04-20T08:10:28Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 15,
-  "uniques" : 10,
+  "count" : 16,
+  "uniques" : 11,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 8, 8 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
