@@ -1,6 +1,6 @@
 {
-  "count": 15,
-  "uniques": 9,
+  "count": 16,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 8,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
